src/pages/Location/Location.css
@import url('https://fonts.googleapis.com/css2?family=Jost:wght@100;400;500;700&display=swap');

.main-location {
  width: 100%;
  height: 100%;
}

.country-container,
.country-container1 {
  display: flex;
  max-width: 1400px;
  margin: 0 auto;
  width: 95vw;
  height: 326px;
}

.country-container1 {
  margin: 1rem auto;
}

.general {
  flex-basis: 70%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 100%;
  background: #fdf3f0;
  border-radius: var(--Border-Radius);
  background-image: url(../../images/Shared/bg-pattern-two-circles.svg);
  background-position: 50% 20%;
  background-repeat: no-repeat;
  background-size: contain;
  padding: 0px 95px;
  height: 100%;
}

.general h1 {
  color: #e7816b;
  font-size: 40px;
  font-weight: 500;
}

.country-info h3 {
  font-size: 16px;
  font-weight: 700;
  line-height: 26px;
}

.country-container p {
  font-size: 16px;
  font-weight: 400;
  line-height: 26px;
}

.country-info-container {
  display: flex;
  width: 100%;
  justify-content: flex-start;
  margin-top: 24px;
}

.country-info:nth-child(1) {
  margin-right: 100px;
}

.location-img {
  height: 326px;
  width: 100%;
  border-radius: var(--Border-Radius);
  flex-basis: 30%;
}

.canada {
  margin-left: 1rem;
}

.australia {
  margin-right: 1rem;
}

.UK {
  margin-left: 1rem;
}

@media screen and (max-width: 982px) {
  .country-container {
    height: 670px;
    flex-direction: column-reverse;
  }
  .general {
    flex-basis: 100%;
  }
  .location-img {
    width: 100%;
    height: 326px;
    flex-basis: 100%;
    margin: 0;
    margin-bottom: 1rem;
  }
  .canada-container-info {
    margin-bottom: 120px;
  }
  .country-container1 {
    height: 670px;
    flex-direction: column;
  }

  .canada {
    background-image: url(../../images/locations/tablet/image-map-canada.png);
  }
  .UK {
    background-image: url(../../images/locations/tablet/image-map-uk.png);
  }

  .australia {
    background-image: url(../../images/locations/tablet/image-map-australia.png);
  }

  .australia-container-info {
    margin-bottom: 120px;
  }
}

@media screen and (max-width: 600px) {
  .main-location {
    margin-top: 90px;
  }
  .general {
    padding: 0px 10px;
  }
  .country-container {
    height: 714px;
    margin: 0 auto;
  }
  .general {
    height: 394px !important;
    margin: 0;
    align-items: center;
  }
  .country-info-container {
    justify-content: space-between;
  }
  .country-container1 {
    margin: 40px auto;
  }
  .country-info:nth-child(1) {
    margin-right: 0;
  }

  .location-img {
    height: 320px !important;
    margin: 0;
  }

  .general h1 {
    font-size: 32px;
    line-height: 36px;
  }
  .country-info-container {
    justify-content: center;
    align-items: center;
    text-align: center;
  }
  .country-info {
    margin: 0;
  }
  .country-info:nth-child(1) {
    margin-bottom: 24px;
  }
}

@media screen and (max-width: 400px) {
  .country-info-container {
    flex-direction: column;
  }
}

